show only devices from same firebase aacount

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,10 @@
     <string name="confirm_password">Confirm Password</string>
     <string name="reset">Reset</string>
     <string name="back">Back</string>
+    <string name="shedule_job">Live cameras</string>
+    <string name="log_out">Log Out</string>
+    <string name="nav_header_title">Name</string>
+    <string name="nav_header_subtitle">username@example.com</string>
+    <string name="no_devices">No cameras found</string>
+    <string name="motion_alarm">Motion Alarm</string>
 </resources>
